--- a/lib/test_phoenix_web/templates/questions/index.html.eex
+++ b/lib/test_phoenix_web/templates/questions/index.html.eex
@@ -1,3 +1,4 @@
-<div class="phx-hero">
-  <h2><%= title()%></h2>
-</div>
+<h1>Question</h1>
+<p><%= @question["question"]%></p>
+<h1>Answer </h1>
+<p><%= @question["answer"]%> </p>
