--- a/lib/test_phoenix_web/templates/questions/category.html.eex
+++ b/lib/test_phoenix_web/templates/questions/category.html.eex
@@ -1,14 +1,14 @@
 <%= form_for @conn, Routes.questions_path(@conn, :category), [method: :get], fn f -> %>
   Category:
-  <%= text_input f, :category %>
+  <%= text_input f, :cat %>
   <%= submit "Search for Category" %>
 <% end %>
 <table>
 <tbody>
+<tr><%= if @category_list == [] do "Nothing Found :(" end%></tr>
 <%= for {cat_num, cat_name} <- @category_list do %>
     <tr>
-    
-    <td><%= link(cat_name, to: "/questions?"<>URI.encode_query("category": cat_num), method: :post) %></td>
+    <td><%= link(cat_name, to: "/?"<>URI.encode_query("category": cat_num)) %></td>
     </tr>
 <% end%>
 </tbody>
