--- a/lib/test_phoenix_web/templates/layout/app.html.eex
+++ b/lib/test_phoenix_web/templates/layout/app.html.eex
@@ -10,14 +10,11 @@
   <body>
     <header>
       <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        
+        
+          <img src="<%= Routes.static_path(@conn, "/images/jeopardy.png") %>" alt="Jeopardy Logo"/, 
+          width="300" height="80", class = "phx-logo">
+        
       </section>
     </header>
     <main role="main" class="container">
